# yap

./: .gitignore  Automata.cpp  Automata.h  CMakeLists.txt  Common.h  Console.cpp  Console.h  HasPtr.h  HasPtrs.h  Lexer.cpp  Lexer.h  README.md  State.cpp  State.h  States.cpp  States.h  Symbol.cpp  Symbol.h  Transition.h  main.cpp
Symbols/: Eof.h  Expr.h  LPar.h  Mult.h  NonTerminalSymbols.h  Plus.h  RPar.h  TerminalSymbol.h  TerminalSymbols.h  Val.h  Value.h  ValuedSymbol.h
Transitions/: Reduction.h  Reductions.cpp  Reductions.h  Shift.h  Shifts.cpp  Shifts.h  Transition.h  Transitions.h
examples/: 3_parenthesis.in  CMakeLists.txt  very_long.in
examples/calc-with-vars/: CMakeLists.txt  CalcWithVars.cpp  LALR-automaton_v1.uxf  NamedConstSymbol.h  NamedVariableSymbol.h  Symbols.h  Transitions.h
examples/simple/: CMakeLists.txt  Simple.cpp  Symbols.h  Transitions.h
include/YAP/: Automata.h  Automaton.h  Common.h  Console.h  HasPtr.h  Lexer.h  Singleton.h  State.h  Symbol.h  TerminalSymbol.h  TokenRule.h  Transition.h  ValuedSymbol.h  YAP.h
src/YAP/: Automata.cpp  Automaton.cpp  CMakeLists.txt  Lexer.cpp  Symbol.cpp
tests/: CMakeLists.txt  tests_lexer.cpp
